--- a/app/src/main/res/layout/fragment_upload_file.xml
+++ b/app/src/main/res/layout/fragment_upload_file.xml
@@ -10,18 +10,42 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_create_course"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/input_lay_username"
-            android:layout_margin="@dimen/dimen_16"
-            android:background="@drawable/common_rounded_button"
-            android:text="@string/create_course"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_weight="1"/>
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_create_course"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/input_lay_username"
+                android:layout_margin="@dimen/dimen_16"
+                android:background="@drawable/btn_circle_bg"
+                android:text="@string/create_course"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/btn_choose"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/input_lay_username"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/dimen_16"
+                android:background="@drawable/btn_circle_bg"
+                android:text="@string/choose"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_weight="1"/>
+
+
+        </LinearLayout>
+
 
 
         <LinearLayout
@@ -47,53 +71,50 @@
                 android:layout_marginLeft="@dimen/dimen_16"
                 android:layout_gravity="center" />
 
-
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/btn_choose"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/input_lay_username"
-            android:layout_margin="@dimen/dimen_16"
-            android:background="@drawable/common_rounded_button"
-            android:text="@string/choose"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_weight="1"/>
-
-
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_upload"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/input_lay_username"
             android:layout_margin="@dimen/dimen_16"
-            android:background="@drawable/common_rounded_button"
+            android:background="@drawable/btn_circle_bg"
             android:text="@string/upload"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            android:layout_gravity="center"
             android:textSize="18sp"
             android:layout_weight="1"
             />
 
         <Button
             android:id="@+id/btn_list_doc"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/common_rounded_button"
+            android:background="@drawable/btn_circle_bg"
             android:layout_margin="@dimen/dimen_16"
             android:textAllCaps="false"
             android:textSize="18sp"
             android:text="List Of Document"
             android:textColor="@color/white"
+            android:layout_weight="1"
             />
+
+    </LinearLayout>
+
+
+
+
+
+
 
 
     </LinearLayout>
