--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -4,11 +4,7 @@
         <item
             android:id="@+id/nav_upload_file"
             android:icon="@drawable/logo"
-            android:title="@string/upload_file" />
-        <item
-            android:id="@+id/nav_list_file"
-            android:icon="@drawable/logo"
-            android:title="@string/list_of_students" />
+            android:title="@string/home" />
 
         <item
             android:id="@+id/nav_view_profile"
