--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -35,7 +35,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="@dimen/dimen_20"
-                android:src="@drawable/proj_icon" />
+                android:src="@drawable/app_main_logo" />
 
 
             <android.support.design.widget.TextInputLayout
