--- a/app/src/main/res/drawable/common_button_selector.xml
+++ b/app/src/main/res/drawable/common_button_selector.xml
@@ -8,7 +8,7 @@
                 <corners android:radius="6dp" />
                 <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
 
-                <gradient android:angle="270" android:endColor="#3F51B5" android:startColor="#3F51B5" android:type="linear" />
+                <gradient android:angle="270" android:endColor="#C4834A" android:startColor="#C4834A" android:type="linear" />
             </shape>
         </item>
         <!-- <item android:right="5dp" android:top="5dp">
