--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -13,7 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="@dimen/dimen_20"
-        android:src="@drawable/logo_trans"
+        android:src="@drawable/app_main_logo"
         android:layout_gravity="center"/>
 
     <TextView
