--- a/app/src/main/res/drawable/btn_circle_bg.xml
+++ b/app/src/main/res/drawable/btn_circle_bg.xml
@@ -3,12 +3,12 @@
     <item android:state_pressed="false" >
         <shape android:shape="oval">
             <size android:height="130dp" android:width="130dp"/>
-            <solid android:color="#C4834A"/>
+            <solid android:color="#607D8B"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="#C4834A"/>
+            <solid android:color="#607D8B"/>
         </shape>
     </item>
 </selector>
