--- a/app/src/main/res/layout/fragment_upload_file.xml
+++ b/app/src/main/res/layout/fragment_upload_file.xml
@@ -103,7 +103,7 @@
             android:layout_margin="@dimen/dimen_16"
             android:textAllCaps="false"
             android:textSize="18sp"
-            android:text="List Of Document"
+            android:text="Uploaded Files"
             android:textColor="@color/white"
             android:layout_weight="1"
             />
