--- a/app/src/main/res/layout/row_layout_uploaded_doc.xml
+++ b/app/src/main/res/layout/row_layout_uploaded_doc.xml
@@ -46,6 +46,7 @@
         android:layout_marginLeft="@dimen/dimen_10"
         android:textSize="16sp"
         android:singleLine="true"
+        android:textStyle="italic"
         android:layout_below="@id/txt_view_title"
         />
 
