--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <!--<color name="colorPrimaryDark">#303F9F</color>-->
     <!--<color name="colorAccent">#303F9F</color>-->
 
-    <color name="colorPrimary">#C4834A</color>
-    <color name="colorPrimaryDark">#C4834A</color>
-    <color name="colorAccent">#C4834A</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#607D8B</color>
+    <color name="colorAccent">#607D8B</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="transparent_black">#66000000</color>
